--- a/Index.html
+++ b/Index.html
@@ -29,8 +29,8 @@
 
 <li><a href="https://www.acer.com/ac/sv/SE/content/series/nitro5" target="_blank" rel="noreferal noopener">The lost forrest</a></li>
 <li><a href=".vscode\descriptionlink.html"  target="_blank" rel="noreferal noopener" >Movie description</a></li>
-
-<footer> <hr />
+<hr />
+<footer> 
     Webbmaster LordBEARSweden Björn Andersson Hired by SF
 </footer>
 </html>
